syntax = "proto3";
package Network;

message NetMessage {
    ProtocolHead Head = 1;
    bytes Content = 2;
}

message ProtocolHead {
    fixed32 UId = 1;
    fixed32 Cmd = 2;
    fixed32 Index = 3;
    fixed32 DataSize = 4;
    fixed32 CheckSum = 5;
}